# cognition-l3-experiment

./: .coverage  .pylintrc  README.md  init.py  pyproject.toml  requirements.txt  test.txt
.github/workflow/: ci.yml
.github/workflows/: ci.yml  lint.yml
core/: config.py  hardware.py  initialize.py
models/: __init__.py  abstract_reasoning.py  algorithms.py  another_model.py  attention.py  attention_mechanisms.py  base_model.py  cognitive_integration.py  consciousness.py  consciousness_model.py  consciousness_state.py  dynamic_attention.py  emotional_intelligence.py  episodic_memory.py  error_handling.py  ethical_safety.py  global_workspace.py  information_integration.py  integration.py  intentionality.py  long_term_memory.py  memory.py  reasoning.py  self_awareness.py  simulated_emotions.py  working_memory.py  workspace.py
models/attention/: attention_mechanisms.py
scripts/: report_cognition.py
tests/: conftest.py  test_consciousness.py  test_consciousness_integration.py  test_dynamic_attention.py  test_environment.py  test_error_correction.py  test_ethical_safety.py  test_intentionality.py  test_lint.py  test_long_term_memory.py  test_reasoning.py  test_self_awareness.py
tests/benchmarks/: test_arc_reasoning.py  test_bigbench_reasoning.py
tests/unit/: test_base.py  test_cognition_progress.py  test_consciousness.py  test_simulated_emotions.py
tests/unit/attention/: test_attention.py  test_attention_mechanisms.py
tests/unit/integration/: test_cognitive_integration.py  test_state_management.py
tests/unit/memory/: test_integration.py  test_memory.py  (+1 more)
(+1 files in other folders)
