[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognition-l3-experiment"
version = "0.1.0"
description = "Cognitive architecture experiment"
requires-python = ">=3.9"
authors = [
    {name = "Your Name"}
]

[tool.setuptools]
packages = ["models"]
